# abstouch-nux

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
completions/: _abstouch  abstouch  abstouch.fish
doc/: abstouch-nux.8  abstouch.8
src/: abstouch.c  config.c  config.h  getch.c  getch.h  print.c  print.h
src/linux/: client.c  client.h  display.c  display.h  event.c  event.h
